[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "istructtab"
version = "0.1.0"
description = "iStructTab: Structured Feature Sequencing for Multimodal Image-Tabular Learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Al Zadid Sultan Bin Habib" },
  { name = "Md Younus Ahamed" },
  { name = "Prashnna Kumar Gyawali" },
  { name = "Gianfranco Doretto" },
  { name = "Donald A. Adjeroh" }
]
keywords = [
  "multimodal-learning",
  "image-tabular-learning",
  "tabular-data",
  "feature-sequencing",
  "column-permutation",
  "transformer",
  "linformer",
  "memory-tokens",
  "GEDS",
  "OEMT"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "numpy>=1.21",
  "torch>=2.0",
  "torchvision>=0.15",
  "linformer>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/zadid6pretam/iStructTab"
Source = "https://github.com/zadid6pretam/iStructTab"
Issues = "https://github.com/zadid6pretam/iStructTab/issues"
Paper = "https://arxiv.org/abs/2604.27606"
Conference = "https://icpr2026.org/"

[tool.setuptools.packages.find]
where = ["."]
include = ["istructtab*"]
