[metadata]
name = istructtab
version = 0.1.0
author = Al Zadid Sultan Bin Habib, Md Younus Ahamed, Prashnna Kumar Gyawali, Gianfranco Doretto, Donald A. Adjeroh
description = Structured Feature Sequencing for Multimodal Image-Tabular Learning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/zadid6pretam/iStructTab
project_urls =
    Paper = https://arxiv.org/abs/2604.27606
    Conference = https://icpr2026.org/
    Source = https://github.com/zadid6pretam/iStructTab
    Issues = https://github.com/zadid6pretam/iStructTab/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.21
    torch>=2.0
    torchvision>=0.15
    linformer>=0.2.1
include_package_data = True

[options.packages.find]
include =
    istructtab
    istructtab.*
